<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutActivity">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/timer"
        android:textColor="@color/primary_normal"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutName"
        tools:text="@string/timer" />

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/exercise"
        android:textColor="@color/primary_normal"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        tools:text="@string/exercise" />


    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="24dp"
        android:text="@string/weight"
        android:textColor="@color/primary_normal"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/completeSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.015"
        tools:text="@string/weight" />

    <TextView
        android:id="@+id/workoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/workoutName"
        android:textColor="@color/primary_normal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/workoutName" />

    <Button
        android:id="@+id/completeSet"
        android:layout_width="215dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/background_distinguished"
        android:text="@string/completeSet"
        android:visibility="visible"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.873"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseName">

        <TextView
            android:id="@+id/setNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/setNumber"
            android:textColor="@color/primary_normal"
            android:textSize="42sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/setNumber" />

        <TextView
            android:id="@+id/setsOutOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_horizontal"
            android:text="@string/setsOutOf"
            android:textColor="@color/primary_subtle"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/setNumber"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/setsOutOf" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <Button
            android:id="@+id/minusButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/background_distinguished"
            android:text="@string/minus"
            android:textSize="24sp"
            android:visibility="visible"
            app:cornerRadius="16sp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/repsNumber"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/repsNumber"
            android:textAlignment="center"
            android:textColor="@color/primary_extreme"
            android:textSize="44sp"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="465dp"
            tools:text="@string/repsNumber" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/background_distinguished"
            android:text="@string/plus"
            android:textSize="24sp"
            android:visibility="visible"
            app:cornerRadius="16sp"
            tools:visibility="visible" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>